2013-08-11  Ramon Casero  <rcasero@gmail.com>

	* matlab/MatlabExportFilter.hxx: (0.3.0)
	* matlab/MatlabExportFilter.h: (0.3.0)

	- Add CopyVectorOfScalarsToMatlab and CopyVectorOfVectorsToMatlab.

2013-08-08  Ramon Casero  <rcasero@gmail.com>

	* cpp/src/third-party/CGAL-4.2/cmake/modules/CGAL_SetupDependencies.cmake:

	- Undo last change, leave find_package(GMP/MPFR) where it was.

	* CMakeLists.txt: (0.5.8)

	- Fix bug. I think that the External Projects called GMP and MPFR
	confuse things, so rename as GMP_GERARDUS and MPFR_GERARDUS.

	- Remove the file size checking of the boost tarball. I hadn't
	realized that it requires an external module that overwrites
	CMake's file(). This could be a pain to maintain in the future.

	* cpp/src/third-party/CGAL-4.2/CMakeLists.txt:

	- Add explicit dependencies from the core CGAL library to gmp and
	mpfr libraries, to make sure that the latter are build before.

	* CMakeLists.txt: (0.5.7)

	- Fix bug. Wrong variable name for C++ compiler.

	* CMakeLists.txt: (0.5.6)

	- Modifications for Linux/Mac so that Gerardus' CMake system can
	configure the project on an Oxford Supercomputing Centre cluster
	(in particular, SAL). By extension, this should make the project
	work on more machines.

	- The compilers can be given as environmental variables as
	gcc/g++, instead of e.g. gcc-4.4. If that's the case, now we check
	what version the compilers are, and whether they are compatible
	with the Matlab version (currently, only Matlab R2012a tested).

	- Older versions of cmake require that ExternalProject_Add have an
	empty DOWNLOAD_COMMAND even if source code is already in a known
	directory.

	- With the Boost libraries, it is possible that the download of
	the boost tarball seems correct, but the tarball is an empty
	file. We need to detect these cases, and exit the build with an
	error. In those cases, the user should just download the tarball,
	e.g. with wget from Linux, copy it to the expected